--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^0.4.1
-  share_extend: ^1.0.3
+  path_provider: ^0.5.0+1
+  share_extend: ^1.0.4
 
 flutter:
   plugin:
